se cambia alt de img por Learn2Roll

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img src="" alt="LogoRollerSchool">
+        <img src="" alt="Learn2Roll">
         <section>
             <ul>
                 <a href="#">
