se agregan elementos a footer básico (sin css)

--- a/index.html
+++ b/index.html
@@ -36,6 +36,27 @@
             </ul>
         </section>
     </header>
+
+
+
+
+
+
+    <footer>
+        <section>
+            <p>Suscríbete a nuestro newsletter</p>
+            <article>
+                <form action="#" method="get">
+                    <input type="email" id="email" name="email" value="Ingresa tu email"> <input type="submit"
+                        value="Suscribirse">
+                </form>
+            </article>
+        </section>
+        <section>
+            <p>Learn2Roll es el sitio ideal para quienes están comenzando con el patinaje, 
+                para aprender de manera fácil e interactiva. ¡Únete a la comunidad!</p>
+        </section>
+    </footer>
 </body>
 
 </html>
